# minifoot

./: .gitignore  DESIGN.md  README.md  biome.json  components.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BACKLOG.md  BALANCING.md  CHANGELOG.md  manager-futebol-minimalista-PLANO-EXECUTAVEL.md  minifoot-identidade-visual-design-system.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/engine/: index.ts
src/engine/domain/: index.ts  types.ts
src/engine/generation/: club-blueprints.ts  generate.ts  index.ts  name-pools.ts
src/engine/news/: index.ts  news.ts  templates.ts
src/engine/progression/: index.ts  season.ts
src/engine/rng/: index.ts  mulberry32.ts
src/engine/simulation/: index.ts  match.ts  ratings.ts  season.ts  table.ts  tactics.ts  team-rating.ts
src/engine/transfers/: index.ts  market.ts  valuation.ts
src/persistence/: index.ts  migrations.ts  save.ts  schemas.ts  tauri-adapter.ts
src/store/: game.store.ts  selectors.ts  settings.store.ts
src/tests/: App.test.tsx
src/tests/e2e/: smoke.spec.ts
src/tests/engine/: generation.test.ts  news.test.ts  progression.test.ts  rng.test.ts  simulation.test.ts  transfers.test.ts
src/tests/persistence/: save.test.ts  schemas.test.ts
src/ui/: formatters.ts  router.tsx
src/ui/components/: PlaceholderView.tsx  ShortcutsDialog.tsx  TutorialCoachMarks.tsx
(+14 files in other folders)
