[package]
name = "minifoot"
version = "0.0.0"
description = "Manager de futebol minimalista"
authors = ["minifoot"]
edition = "2021"

[lib]
name = "minifoot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
